--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "formidable": "^2.1.1",
+    "mangodb": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.0",
     "upper-case": "^2.0.2"
