--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "name": "nodejs",
+  "version": "1.0.0",
+  "description": "Learing nodejs",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
+    "express": "^4.18.2",
     "formidable": "^2.1.1",
     "mangodb": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.0",
+    "pg": "^8.9.0",
     "upper-case": "^2.0.2"
   }
 }
